--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -3,3 +3,10 @@ daemonize = yes
 
 [www]
 listen = 127.0.0.1:8080
+user = www-data
+group = www-data
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
