Fix nginx configuration structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,33 @@
-server {
-    listen 8080;
-    server_name localhost;
+# Main configuration
+worker_processes 1;
 
-    root /path/to/your/project/public;  # Replace with the actual path in your container
-    index index.php index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    
+    sendfile        on;
+    keepalive_timeout  65;
 
-    location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:8080;  # Port that php-fpm is listening on
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    server {
+        listen 8080;
+        server_name localhost;
+
+        root /app/public;  # Adjust to your project's public directory
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
+            fastcgi_pass 127.0.0.1:8080;  # Ensure this matches your PHP-FPM configuration
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
     }
 }
