--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,3 @@
-# Main configuration
 worker_processes 1;
 
 events {
@@ -6,11 +5,11 @@ events {
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    
-    sendfile        on;
-    keepalive_timeout  65;
+    include config/mime.types;  # Include the mime.types file from the config directory
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
 
     server {
         listen 8080;
