Add fastcgi_params to project

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-    include config/mime.types;  # Include the mime.types file from the config directory
+    include config/mime.types;  # Use your custom path if mime.types is in your project
     default_type application/octet-stream;
 
     sendfile on;
@@ -25,7 +25,7 @@ http {
         location ~ \.php$ {
             fastcgi_pass 127.0.0.1:8080;  # Ensure this matches your PHP-FPM configuration
             fastcgi_index index.php;
-            include fastcgi_params;
+            include config/fastcgi_params;  # Point to your custom path
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
     }
