altered nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,10 +23,11 @@ http {
         }
 
         location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:8080;  # Ensure this matches your PHP-FPM configuration
-            fastcgi_index index.php;
-            include config/fastcgi_params;  # Point to your custom path
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+        fastcgi_pass 127.0.0.1:9000;  # Ensure this matches the port `php-fpm` is listening on
+        fastcgi_index index.php;
+        include /app/config/fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
     }
 }
